Fixing tests after adding support of AeroAPi