@@ -1,10 +1,12 @@
 package com.capstone.producer.kafka;
 
 import com.capstone.producer.ServiceHandler;
+import com.capstone.producer.clients.AeroApiClientCaller;
 import com.capstone.producer.clients.AviationStackClientCaller;
 import com.capstone.producer.common.bindings.GenerateRequest;
+import com.capstone.producer.common.bindings.aero.FlightInfoFa_Id;
+import com.capstone.producer.common.bindings.aero.Position;
 import com.capstone.producer.common.bindings.aviationstack.Airline;
-import com.capstone.producer.common.bindings.aviationstack.Flight;
 import com.capstone.producer.common.bindings.aviationstack.FlightInfo;
 import com.capstone.producer.common.bindings.aviationstack.Live;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -16,7 +18,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -26,7 +28,10 @@ import static org.mockito.Mockito.when;
 public class ServiceHandlerTest {
 
     @Mock
-    private AviationStackClientCaller caller;
+    private AviationStackClientCaller aviationCaller;
+
+    @Mock
+    private AeroApiClientCaller aeroCaller;
 
     @InjectMocks
     private ServiceHandler serviceHandler;
@@ -48,7 +53,7 @@ public class ServiceHandlerTest {
         FlightInfo flightInfo = new FlightInfo();
         flightInfo.setAirline(new Airline().setName("NAME"));
         flightInfo.setLive(new Live());
-        when(caller.getFlightFromIcao(anyString())).thenReturn(flightInfo);
+        when(aviationCaller.getFlightFromIcao(anyString())).thenReturn(flightInfo);
 
         //String result = serviceHandler.handleFlightIcao("JD123");
 
@@ -57,16 +62,15 @@ public class ServiceHandlerTest {
 
     @Test
     public void handLiveRequest() throws JsonProcessingException {
-        Flight flight = new Flight();
-        flight.setIcao("ICAO");
 
-        FlightInfo flightInfo = new FlightInfo();
-        flightInfo.setFlight(flight);
-        when(caller.getAllActiveFlightsWithLive()).thenReturn(Arrays.asList(flightInfo));
+        FlightInfoFa_Id flightInfo = new FlightInfoFa_Id();
+        flightInfo.setLast_position(new Position());
+        flightInfo.setFa_flight_id("FAID");
+        when(aeroCaller.getAllActiveFlightsWithLive()).thenReturn(List.of(flightInfo));
 
         String result = serviceHandler.handleLiveRequest();
 
-        assertEquals("{\"icaos\":\"ICAO\"}", result);
+        assertEquals("{\"faids\":\"FAID\"}", result);
     }
 
     @Test
@@ -75,7 +79,7 @@ public class ServiceHandlerTest {
 
         String toBeSent = serviceHandler.handleGenerateRequest(generateRequest);
 
-        assertEquals("{\"icao\":\"ICAO\",\"airline\":\"AIRLINE\",\"live\":\"{\\\"updated\\\":\\\"null\\\",\\\"latitude\\\":0.00,\\\"longitude\\\":0.00,\\\"altitude\\\":0.00,\\\"direction\\\":0,\\\"speed_horizontal\\\":0.00,\\\"speed_vertical\\\":0.00,\\\"is_ground\\\":false}\"}", toBeSent);
+        assertEquals("{\"icao\":\"ICAO\",\"airline\":\"AIRLINE\",\"generate\":true,\"live\":\"{\\\"updated\\\":\\\"null\\\",\\\"latitude\\\":0.00,\\\"longitude\\\":0.00,\\\"altitude\\\":0.00,\\\"direction\\\":0,\\\"speed_horizontal\\\":0.00,\\\"speed_vertical\\\":0.00,\\\"is_ground\\\":false}\"}", toBeSent);
     }
 
 }
